cabal-version:       2.0

name:                js4
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE

author:              Yu Changyuan
maintainer:          reivzy@gmail.com

category:            Web

build-type:          Simple

extra-source-files:  CHANGELOG.md


executable js4
  main-is:             Main.hs
  other-extensions:    ScopedTypeVariables
  other-modules: RTC

  build-depends:       base ^>=4.12.0.0, bytestring ^>=0.10.8.2, 
                       text, lens, time,
                       aeson, containers,
                       eccrypto,
                       jsaddle, ghcjs-dom,
                       ghcjs-prim, ghcjs-base,
                       reflex, reflex-dom-core


  hs-source-dirs:      src
  js-sources:   jsbits/sha512.js
                jsbits/sha512_glue.js
                jsbits/paho-mqtt-min.js

  default-language:    Haskell2010

